[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Blaster/Charge.svg" type="Texture" id=1]
[ext_resource path="res://Weapons/PlasmaCannon/PlasmaCharge.gd" type="Script" id=2]
[ext_resource path="res://Assets/Blaster/Charging/00 - plasmacharge - sfx plasmacharge level3.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Blaster/Charging/00 - plasmacharge - sfx plasmacharge level1.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Blaster/Charging/00 - plasmacharge - sfx plasmacharge level2.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Blaster/Charging/00 - plasmacharge - sfx plasmacharge level4.ogg" type="AudioStream" id=6]

[node name="PlasmaCharge" type="Node2D"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="level1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="level2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="level3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="level4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
